Adição de bônus de XP para coleções grandes